# sizu

./: .gitignore  CLAUDE.md  PROJECT.md  claude-progress.txt  feature_list.json  init.sh  需求.md
code/dobot_quad_sdk-main/: .clang-format  .clangd  .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  cyclonedds.xml  pyproject.toml  setup_cyclonedds_env.sh
code/dobot_quad_sdk-main/docs/: .readthedocs.yaml  README.md  README.zh.md  build_local.py  mkdocs.yml  requirements.docs.txt
code/dobot_quad_sdk-main/docs/docs/: LICENSE  changelog.md  changelog.zh.md  index.md  index.zh.md
code/dobot_quad_sdk-main/docs/docs/api/: high_level.md  high_level.zh.md  low_level.md  low_level.zh.md
code/dobot_quad_sdk-main/docs/docs/getting-started/: installation.md  installation.zh.md  quickstart.md  quickstart.zh.md
code/dobot_quad_sdk-main/docs/docs/index/: structure.eddx
code/dobot_quad_sdk-main/docs/site/: 404.html  index.html  sitemap.xml
code/dobot_quad_sdk-main/docs/site/api/high_level/: index.html
code/dobot_quad_sdk-main/docs/site/api/low_level/: index.html
code/dobot_quad_sdk-main/docs/site/changelog/: index.html
code/dobot_quad_sdk-main/docs/site/getting-started/installation/: index.html
code/dobot_quad_sdk-main/docs/site/getting-started/quickstart/: index.html
code/dobot_quad_sdk-main/docs/site/search/: search_index.json
code/dobot_quad_sdk-main/docs/site/stylesheets/: extra.css
code/dobot_quad_sdk-main/docs/site/zh/: index.html
code/dobot_quad_sdk-main/docs/site/zh/api/high_level/: index.html
code/dobot_quad_sdk-main/docs/site/zh/api/low_level/: index.html
code/dobot_quad_sdk-main/docs/site/zh/changelog/: index.html
code/dobot_quad_sdk-main/docs/site/zh/getting-started/installation/: index.html
code/dobot_quad_sdk-main/docs/site/zh/getting-started/quickstart/: index.html
code/dobot_quad_sdk-main/high_level/cpp/: CMakeLists.txt  e10_config_demo.cpp  e1_get_available_motions.cpp  e2_get_current_state.cpp  e3_auto_state_switch.cpp  e4_velocity_sequence.cpp  e5_robot_state.cpp  e6_balance_motions.cpp  e7_line_walk.cpp  e8_rotation.cpp  e9_combo_sequence.cpp  kill_robot.cpp  robot_client.h
code/dobot_quad_sdk-main/high_level/python/: .gitignore  pyproject.toml  setup.py
code/dobot_quad_sdk-main/high_level/python/dobot_quad/: __init__.py  robot_client.py
code/dobot_quad_sdk-main/high_level/python/dobot_quad/proto/: __init__.py  grpc_service.proto
code/dobot_quad_sdk-main/high_level/python/examples/: e10_config_demo.py  e1_get_available_motions.py  e2_get_current_state.py  e3_auto_state_switch.py  e4_velocity_sequence.py  e5_robot_state.py  e6_balance_motions.py  e7_line_walk.py  e8_rotation.py  e9_combo_sequence.py  kill_robot.py
code/dobot_quad_sdk-main/high_level/test/: README.md
code/dobot_quad_sdk-main/high_level/test/cpp/: CMakeLists.txt  test_robot_client.cpp
code/dobot_quad_sdk-main/high_level/test/python/: conftest.py  test_balance.py  test_config.py  test_constructor.py  test_execution.py  test_locomotion.py  test_query.py  test_rotation.py  test_state_switching.py
code/dobot_quad_sdk-main/low_level/cpp/: CMakeLists.txt  dds_config.yaml  e1_rgb_image_sub.cc  e2_depth_image_sub.cc  e3_led_control.cc  e4_imu_state_sub.cc  e5_motor_state_sub.cc  e6_bms_state_sub.cc  e7_voice_pub.cc  e8_voice_sub.cc  e9_motor_cmd_pub.cc
code/dobot_quad_sdk-main/low_level/python/: e1_rgb_image_sub.py  e2_depth_image_sub.py  e3_led_control_pub.py  e4_imu_state_sub.py  e5_motor_state_sub.py  e6_bms_state_sub.py  e7_voice_pub.py  e8_voice_sub.py  e9_motor_cmd_pub.py
code/dobot_quad_sdk-main/resources/dobot_quad/: CMakeLists.txt  package.xml
code/dobot_quad_sdk-main/resources/dobot_quad/launch/: display.launch.py
code/dobot_quad_sdk-main/resources/dobot_quad/urdf/: dobot_quad_ros.urdf
code/dobot_quad_sdk-main/resources/dobot_quad/xacro/: dobot_quad.xacro  leg_dobot_quad_collision_complete.xacro
code/dobot_quad_sdk-main/resources/dobot_quad_wheel/: CMakeLists.txt  package.xml
code/dobot_quad_sdk-main/resources/dobot_quad_wheel/launch/: display.launch.py
code/dobot_quad_sdk-main/resources/dobot_quad_wheel/urdf/: dobot_quad_wheel_ros.urdf
code/dobot_quad_sdk-main/resources/dobot_quad_wheel/xacro/: dobot_quad_wheel.xacro  leg_dobot_quad_collision_complete.xacro
code/dobot_quad_sdk-main/utils/: audio_file_convert.py
产品资料/供应商资料/dobot_hex_sdk-main/: README.md  README_zh.md  ros2_setup.bash  start_wifi.sh
产品资料/供应商资料/dobot_hex_sdk-main/high_level/: CMakeLists.txt
产品资料/供应商资料/dobot_hex_sdk-main/high_level/py/: body_twist.py  locomotion.py  robot_state.py
产品资料/供应商资料/dobot_hex_sdk-main/high_level/src/: body_twist.cpp  locomotion.cpp  robot_state.cpp
产品资料/供应商资料/dobot_hex_sdk-main/livox/: CMakeLists.txt
产品资料/供应商资料/dobot_hex_sdk-main/livox/py/: lidar_fps_pc.py  lidar_imu.py
产品资料/供应商资料/dobot_hex_sdk-main/livox/src/: lidar_fps_pc.cpp  lidar_imu.cpp
产品资料/供应商资料/dobot_hex_sdk-main/motor_sdk/: CMakeLists.txt  README.md
产品资料/供应商资料/dobot_hex_sdk-main/motor_sdk/example/: motor_read.cpp  motor_wave.cpp
产品资料/供应商资料/dobot_hex_sdk-main/motor_sdk/include/: IOPort.h  UDPPort.h  absolute_timer.h  comm.h  motor_sdk.h  periodic_function.h  robot_sdk.h  serial_port.h
产品资料/供应商资料/dobot_hex_sdk-main/motor_sdk/python_wrapper/: CMakeLists.txt  motor_read.py  motor_wave.py  robot_interface.cpp
产品资料/供应商资料/dobot_hex_sdk-main/realsense/: CMakeLists.txt
产品资料/供应商资料/dobot_hex_sdk-main/realsense/py/: camera_fps.py  camera_info.py
产品资料/供应商资料/dobot_hex_sdk-main/realsense/src/: camera_fps.cpp  camera_info.cpp
产品资料/供应商资料/dobot_hex_sdk-main/resources/: CMakeLists.txt  package.xml
产品资料/供应商资料/dobot_hex_sdk-main/resources/launch/: display.launch.py
产品资料/供应商资料/dobot_hex_sdk-main/resources/urdf/: dobot_hex.urdf
产品资料/内部梳理/: 硬件模块清单.md  硬件模块确认表_供应商填写.md  硬件软件模块参考框架.md  硬件软件模块清单.md  资料汇编.md  软件模块清单.md
学习笔记/: SDK学习路径_C++.md  知识体系总览.html  系统集成方案.html
开发计划/: 场地部署与环境建图_二次开发规划.md
