[build-system]
requires = ["setuptools>=61", "wheel", "grpcio-tools==1.78.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dobot-quad-highlevel"
version = "2.0.0"
description = "Dobot Quad high-level Python SDK — gRPC client for quadruped robot control"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["grpcio-tools==1.78.0", "grpcio==1.78.0", "protobuf>=4.25.0"]

[tool.setuptools.packages.find]
include = ["dobot_quad*"]

[tool.setuptools.package-data]
"dobot_quad.proto" = ["*.proto"]
